@@ -1617,6 +1617,8 @@ body {
 
 <p><strong>save_buyback</strong> | <code>bool</code> | Saves the vendor buyback stock whenever the game is saved.</p>
 
+<p><strong>keep_buyback_on_map_change</strong> | <code>bool</code> | If true, NPC buyback stocks will persist when the map changes. If false, save_buyback is disabled.</p>
+
 <hr />
 
 <h4>Settings: Resolution</h4>
